kubernetes/src/assets/ptx-builder-pod2.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: builder2
  namespace: ptx-edge
  labels:
    app: builder2
    env: test
spec:
  serviceAccountName: builder
  volumes:
    - name: src
      hostPath:
        path: /usr/local/share/ptx-edge/builder/app
        type: Directory
    - name: registry-ca
      hostPath:
        path: /usr/share/ca-certificates/ptx-edge/registry_CA.crt
        type: File
    - name: data-dir
      emptyDir:
        sizeLimit: 100Mi
    - name: worker-dir
      emptyDir:
        sizeLimit: 100Mi
    - name: kube-api-client-cfg
      projected:
        defaultMode: 420
        sources:
          - serviceAccountToken:
              expirationSeconds: 3607
              path: token
          - configMap:
              items:
                - key: ca.crt
                  path: ca.crt
              name: kube-root-ca.crt
          - downwardAPI:
              items:
                - fieldRef:
                    apiVersion: v1
                    fieldPath: metadata.namespace
                  path: namespace
  containers:
    - name: worker
      image: k8s.gcr.io/pause
  restartPolicy: Never
