kubernetes/src/assets/ptx-builder-setup.yaml
apiVersion: v1
kind: Pod
metadata:
  name: builder
  namespace: ptx-edge
spec:
  containers:
    - name: builder
      image: registry.k3d.local:5000/ptx-edge/builder:1.0
      imagePullPolicy: IfNotPresent
      #command: [ "python3.13", "-m", "app.builder"]
      command: [ "/bin/sh", "-c", "sleep infinity" ]
      volumeMounts:
        - name: src
          mountPath: /usr/src/builder/app
        - name: worker-dir
          mountPath: /usr/src/worker
          readOnly: false
        - name: data-dir
          mountPath: /var/cache/data
          readOnly: false
  restartPolicy: Never
  volumes:
    - name: src
      hostPath:
        path: /usr/local/share/builder/app
        type: Directory
    - name: data-dir
      emptyDir:
        sizeLimit: 100Mi
    - name: worker-dir
      emptyDir:
        sizeLimit: 100Mi
