kubernetes/src/assets/ptx-controller-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: controller
  namespace: ptx-edge
  labels:
    app: controller
spec:
  serviceAccountName: controller
  containers:
    - name: controller
      image: registry.k3d.local:5000/ptx-edge/controller:1.0
      imagePullPolicy: IfNotPresent
      #command: [ "kopf", "run",  "--namespace=ptx-edge", "--standalone", "--debug",
      #           "--liveness=http://0.0.0.0:8080/healthz", "app/controller.py" ]
      command: [ "/bin/sh", "-c", "sleep infinity" ]
      ports:
        - name: api-port
          containerPort: 8080
          protocol: TCP
      volumeMounts:
        - name: src
          mountPath: /usr/src/controller/app
  volumes:
    - name: src
      hostPath:
        path: /usr/local/share/ptx-edge/controller/app
        type: Directory
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-basic-auth
  namespace: ptx-edge
spec:
  basicAuth:
    secret: api-basic-auth
    realm: ptx-edge
---
