kubernetes/src/assets/ptx-pdc-daemon.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: pdc
  namespace: ptx-edge
  labels:
    app: pdc
spec:
  selector:
    matchLabels:
      app: pdc
  template:
    metadata:
      labels:
        app: pdc
    spec:
      nodeSelector:
        connector.dataspace.ptx.org/enabled: "true"
      serviceAccountName: pdc
      containers:
        - name: ptx-connector
          image: registry.k3d.local:5000/ptx/connector:1.9.4-slim
          imagePullPolicy: IfNotPresent
          ports:
            - name: pdc-port
              containerPort: 3000
              protocol: TCP
              hostPort: 30003
          volumeMounts:
            - name: pdc-env
              mountPath: "/usr/src/app/.env.production"
              subPath: .env.production
              readOnly: true
            - name: pdc-config
              mountPath: "/usr/src/app/dist/src/config.production.json"
              subPath: config.production.json
              readOnly: true
          command: [ "npm", "run", "start" ]
      volumes:
        - name: pdc-env
          configMap:
            name: pdc-config
            items:
              - key: .env
                path: .env.production
        - name: pdc-config
          configMap:
            name: pdc-config
            items:
              - key: config.json
                path: config.production.json
        - name: src
          hostPath:
            path: /usr/local/share/builder/app
            type: Directory
        - name: kube-api-token
          projected:
            defaultMode: 420
            sources:
              - serviceAccountToken:
                  expirationSeconds: 3607
                  path: token
              - configMap:
                  items:
                    - key: ca.crt
                      path: ca.crt
                  name: kube-root-ca.crt
              - downwardAPI:
                  items:
                    - fieldRef:
                        apiVersion: v1
                        fieldPath: metadata.namespace
                      path: namespace
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: pdc
#  namespace: ptx-edge
#spec:
#  type: ClusterIP
#  clusterIP: None # Headless service without virtual IP, proxying, and port translation
#  ports:
#    - name: pdc-port
#      protocol: TCP
#      port: 30003   # Must match the target port in case of headless
#      targetPort: 30003
#---
#apiVersion: discovery.k8s.io/v1
#kind: EndpointSlice
#metadata:
#  name: pdc
#  labels:
#    kubernetes.io/service-name: pdc  # Set its value to match the name of the Service
#    endpointslice.kubernetes.io/managed-by: controller.ptx-edge.org
#addressType: IPv4
#ports:
#  - name: pdc-port # should match with the name of the service port defined above
#    appProtocol: http
#    protocol: TCP
#    port: 30003
#endpoints:
#  - addresses:
#      - "172.21.0.2"
