kubernetes/src/assets/ptx-scheduler-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: scheduler
  namespace: ptx-edge
  labels:
    app: scheduler
spec:
  serviceAccountName: scheduler
  containers:
    - name: scheduler
      image: registry.k3d.local:5000/ptx-edge/scheduler:1.0
      imagePullPolicy: IfNotPresent
      #command: [ "python3", "-m", "app", "-v"]
      command: [ "/bin/sh", "-c", "sleep infinity" ]
      volumeMounts:
        - name: src
          mountPath: /usr/src/scheduler/app
  volumes:
    - name: src
      hostPath:
        path: /usr/local/share/scheduler/app
        type: Directory
