kubernetes/src/assets/ptx-test-worker-pod.yaml
#---
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: test-pvc
#  namespace: ptx-edge
##  annotations:
##    volumeType: local
##    volume.kubernetes.io/selected-node: k3d-dev-agent-0
#  labels:
#    app.kubernetes.io/name: test
#    env: demo
#spec:
#  accessModes:
#    - ReadWriteOnce
#  storageClassName: local-path
#  resources:
#    requests:
#      storage: 50Mi
---
apiVersion: v1
kind: Pod
metadata:
  name: test
  namespace: ptx-edge
  labels:
    app: worker
    env: test
spec:
  schedulerName: ptx-edge-scheduler
  terminationGracePeriodSeconds: 1
  nodeSelector:
    privacy-zone.dataspace.ptx.org/zone-A: "true"
    connector.dataspace.ptx.org/enabled: "true"
  containers:
    - name: test
      image: registry.k3d.local:5000/busybox:latest
      imagePullPolicy: Always
      command: [ "sh", "-c", "sleep infinity" ]
      resources:
        requests:
          cpu: 100m
          memory: 90Mi
        limits:
          cpu: 500m
          memory: 310Mi
      volumeMounts:
        - mountPath: "/data"  # Mounts the volume at the "/data" directory inside the container
          name: data
        - mountPath: "/result"
          subPath: "storage/result" # Create subpath(folders) in the mount volume
          name: result-dir

  volumes:
    - name: data
      emptyDir:
        sizeLimit: 100Mi
    - name: result-dir
      persistentVolumeClaim:
        claimName: test-pvc
---
