kubernetes/src/assets/ptx-builder-pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: builder-webhook
  namespace: ptx-edge
  labels:
    env: test
spec:
  selector:
    app: builder
  type: ClusterIP
  ports:
    - name: webhook-port
      protocol: TCP
      port: 9999
      targetPort: 9999  # Required port reference by number, as port names does not propagate into endpoint slice
  publishNotReadyAddresses: true  # Required for service to consider non-ready pods in endpoint slice
--- ####################################################################################################################
# kubectl create serviceaccount builder
# kubectl config set-credentials builder --token=$(kubectl create token builder)
# kubectl config set-context builder-context --cluster=k3d-dev --user=builder
# kubectl config use-context builder-context
apiVersion: v1
kind: ServiceAccount
metadata:
  name: builder
  labels:
    app: builder
    env: test
automountServiceAccountToken: false
---
apiVersion: v1
kind: Pod
metadata:
  name: builder
  namespace: ptx-edge
  labels:
    app: builder
    env: test
spec:
  serviceAccountName: builder
  volumes:
    - name: src
      hostPath:
        path: /usr/local/share/ptx-edge/builder/app
        type: Directory
    - name: registry-ca
      hostPath:
        path: /usr/share/ca-certificates/ptx-edge/registry_CA.crt
        type: File
    - name: data-dir
      emptyDir:
        sizeLimit: 100Mi
    - name: worker-dir
      emptyDir:
        sizeLimit: 100Mi
    - name: kube-api-client-cfg
      projected:
        defaultMode: 420
        sources:
          - serviceAccountToken:
              expirationSeconds: 3607
              path: token
          - configMap:
              items:
                - key: ca.crt
                  path: ca.crt
              name: kube-root-ca.crt
          - downwardAPI:
              items:
                - fieldRef:
                    apiVersion: v1
                    fieldPath: metadata.namespace
                  path: namespace
  containers:
    - name: worker
      image: k8s.gcr.io/pause
  restartPolicy: Never
