kubernetes/src/assets/ptx-pdc-setup.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pdc
  namespace: ptx-edge
  labels:
    app: pdc
spec:
  containers:
    - name: ptx-connector
      image: registry.k3d.local:5000/ptx/connector:1.9.2-slim
      imagePullPolicy: IfNotPresent
      ports:
        - name: pdc-port
          containerPort: 3000
      volumeMounts:
        - name: pdc-env
          mountPath: "/usr/src/app/.env.production"
          subPath: .env.production
          readOnly: true
        - name: pdc-config
          mountPath: "/usr/src/app/dist/src/config.production.json"
          subPath: config.production.json
          readOnly: true
      command: [ "npm", "run", "start" ]
  volumes:
    - name: pdc-env
      configMap:
        name: pdc-config
        items:
          - key: .env
            path: .env.production
    - name: pdc-config
      configMap:
        name: pdc-config
        items:
          - key: config.json
            path: config.production.json
---
apiVersion: v1
kind: Service
metadata:
  name: pdc
  namespace: ptx-edge
spec:
  selector:
    app: pdc
  type: NodePort
  ports:
    - name: pdc-port
      port: 3000
      nodePort: 30030
