kubernetes/src/assets/ptx-pdc-daemon_cluster.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: pdc
  namespace: ptx-edge
  labels:
    app: pdc
spec:
  selector:
    matchLabels:
      app: pdc
  template:
    metadata:
      labels:
        app: pdc
    spec:
      nodeSelector:
        connector.dataspace.ptx.org/enabled: "true"
      serviceAccountName: pdc
      containers:
        - name: connector
          image: registry.k3d.local:5000/ptx/connector:1.11.0-slim
          imagePullPolicy: IfNotPresent
          ports:
            - name: pdc-port
              containerPort: 3000
              protocol: TCP
              hostPort: 30003
          volumeMounts:
            - name: env
              mountPath: "/usr/src/app/.env.production"
              subPath: .env.production
              readOnly: true
            - name: config
              mountPath: "/usr/src/app/dist/src/config.json.tmp"
              subPath: config.json.tmp
              readOnly: true
            - name: entrypoint
              mountPath: /usr/src/app/docker/scripts/entrypoint.sh
              subPath: entrypoint.sh
              readOnly: true
          command: [ "/bin/sh", "/usr/src/app/docker/scripts/entrypoint.sh" ]
          args: [ "npm", "run", "start" ]
      volumes:
        - name: env
          configMap:
            name: pdc-config
            items:
              - key: .env
                path: .env.production
        - name: config
          configMap:
            name: pdc-config
            items:
              - key: config.json
                path: config.json.tmp
        - name: entrypoint
          configMap:
            name: pdc-config
            items:
              - key: entrypoint.sh
                path: entrypoint.sh
        - name: src
          hostPath:
            path: /usr/local/share/ptx-edge/builder/app
            type: Directory
        - name: kube-api-client-cfg
          projected:
            defaultMode: 420
            sources:
              - serviceAccountToken:
                  expirationSeconds: 3607
                  path: token
              - configMap:
                  items:
                    - key: ca.crt
                      path: ca.crt
                  name: kube-root-ca.crt
              - downwardAPI:
                  items:
                    - fieldRef:
                        apiVersion: v1
                        fieldPath: metadata.namespace
                      path: namespace
---
apiVersion: v1
kind: Service
metadata:
  name: pdc-zone-a
  namespace: ptx-edge
spec:
  selector:
    app: pdc
    connector.dataspace.ptx.org/id: "pdc-zone-a"
  type: ClusterIP
  ports:
    - name: pdc-port
      port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: pdc-zone-b
  namespace: ptx-edge
spec:
  selector:
    app: pdc
    privacy-zone.dataspace.ptx.org/zone-B: "true"
  type: ClusterIP
  ports:
    - name: pdc-port
      port: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pdc-zone-a
  namespace: ptx-edge
  labels:
    app: pdc
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/ptx-edge/zone-a/pdc`)
      kind: Rule
      services:
        - name: pdc-zone-a
          port: 3000
      middlewares:
        - name: pdc-zone-a-stripprefix
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pdc-zone-a-stripprefix
  labels:
    app: pdc
spec:
  stripPrefix:
    prefixes:
      - /ptx-edge/zone-a/pdc
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pdc-zone-b
  namespace: ptx-edge
  labels:
    app: pdc
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/ptx-edge/zone-b/pdc`)
      kind: Rule
      services:
        - name: pdc-zone-b
          port: 3000
      middlewares:
        - name: pdc-zone-b-stripprefix
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pdc-zone-b-stripprefix
  labels:
    app: pdc
spec:
  stripPrefix:
    prefixes:
      - /ptx-edge/zone-b/pdc
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: pdc
#  labels:
#    app: pdc
#  annotations:
#    ingress.kubernetes.io/ssl-redirect: "false"
#spec:
#  rules:
#  - http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: pdc-zone-a
#            port:
#              number: 3000
