kubernetes/src/assets/ptx-rest-api-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: rest-api
  namespace: ptx-edge
  labels:
    app: rest-api
spec:
  terminationGracePeriodSeconds: 1
  serviceAccountName: rest-api
  containers:
    - name: rest-api
      image: registry.k3d.local:5000/ptx-edge/rest-api:1.0
      imagePullPolicy: IfNotPresent
      #command: [ "uvicorn", "app.main:app", "--workers=2",
      #           "--host=0.0.0.0", "--port=8080",
      #           "--reload", "--reload-dir=app",
      #           "--access-log", "--log-level=debug" ]
      command: [ "/bin/sh", "-c", "sleep infinity" ]
      ports:
        - name: api-port
          containerPort: 8080
      volumeMounts:
        - name: src
          mountPath: /usr/src/api/app
  volumes:
    - name: src
      hostPath:
        path: /usr/local/share/ptx-edge/rest-api/app
        type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: rest-api
  namespace: ptx-edge
spec:
  selector:
    app: rest-api
  type: ClusterIP
  ports:
    - name: api-port
      port: 8080
      targetPort: api-port
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-basic-auth
  namespace: ptx-edge
spec:
  basicAuth:
    secret: api-basic-auth
    realm: ptx-edge
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-api
  namespace: ptx-edge
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: ptx-edge-api-basic-auth@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /ptx-edge/api/v1
            pathType: Prefix
            backend:
              service:
                name: rest-api
                port:
                  number: 8080
---
